# iPassaHarte

./: CMakeLists.txt  README.md  main.cpp
driver/serial/boost/: Serial.cpp  Serial.h  SerialReader.cpp
driver/serial/win/: Serial.cpp  Serial.h  SerialReader.cpp  SerialReader.h
driver/socket/server/: ServerSocket.cpp  ServerSocket.h
dto/: SerialDTO.h
libs/: ConfigLib.cpp  ConfigLib.h
libs/serial/: SerialReaderLib.cpp  SerialReaderLib.h  SerialSubscriber.h
services/: SystemServices.cpp  SystemServices.hpp
sys/: iPassaHarte.ini
utils/: utils.cpp  utils.h
